VM provisioning using StorageProfile to filter datastore

--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
@@ -421,6 +421,16 @@
           :required: false
           :display: :edit
           :data_type: :integer
+        :storage_profile_filter:
+          :values_from:
+            :options:
+              :category: :StorageProfile
+            :method: :allowed_storage_profiles
+          :auto_select_single: false
+          :description: Storage Profile
+          :required: false
+          :display: :edit
+          :data_type: :integer
         :placement_host_name:
           :values_from:
             :method: :allowed_hosts
