--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,3 +37,9 @@ ClassAndModuleCamelCase:
 FileName:
   Exclude:
     - lib/miq_automation_engine/service_models/*.rb
+LineLength:
+  Exclude:
+    - Gemfile
+ExtraSpacing:
+  Exclude:
+    - Gemfile
