gems/pending/Gemfile is also ok to have long lines/extra space
Follow up to #10486

[skip ci]

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,6 +40,8 @@ FileName:
 LineLength:
   Exclude:
     - Gemfile
+    - gems/pending/Gemfile
 ExtraSpacing:
   Exclude:
     - Gemfile
+    - gems/pending/Gemfile
