--- a/config/ha_admin.yml
+++ b/config/ha_admin.yml
@@ -1,4 +1,4 @@
 ---
 failover_attempts: 10
-db_connected_check_frequency: 5.minutes
-failover_check_frequency: 1.minute
+db_check_frequency: 300
+failover_check_frequency: 60
