Allow rubocop to merge inherit_from correctly
There is currently a bug with `rubocop` that clobbers additions from
inherited files if Namespaces aren't used in the original config:

https://github.com/bbatsov/rubocop/pull/3421

While waiting on the above fix to be merged and released, converting to
using namespaces in the inherited file will avoid this issue and
shouldn't be a problem when upgrading in the future, allowing us to
inherit properly and maintain ManageIQ specific additions to the default
found in ManageIQ/Guides

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,11 +37,11 @@ ClassAndModuleCamelCase:
 FileName:
   Exclude:
     - lib/miq_automation_engine/service_models/*.rb
-# LineLength: # Commenting until config loading with inheritence is fixed.
-#   Exclude:
-#     - Gemfile
-#     - gems/pending/Gemfile
-ExtraSpacing:
+Metrics/LineLength:
+  Exclude:
+    - Gemfile
+    - gems/pending/Gemfile
+Style/ExtraSpacing:
   Exclude:
     - Gemfile
     - gems/pending/Gemfile
