--- a/bower.json
+++ b/bower.json
@@ -48,6 +48,6 @@
     "qs": "^0.3.10",
     "rxjs": "^4.1.0",
     "rx-angular": "rx.angular#^1.1.3",
-    "manageiq-ui-components": "0.0.3"
+    "manageiq-ui-components": "~0.0.4"
   }
 }
