--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_template.yaml
@@ -421,7 +421,7 @@
           :required: false
           :display: :edit
           :data_type: :integer
-        :storage_profile_filter:
+        :storage_profile:
           :values_from:
             :method: :allowed_storage_profiles
           :auto_select_single: false
