--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
@@ -407,6 +407,14 @@
           :required: false
           :display: :edit
           :data_type: :integer
+        :storage_profile:
+          :values_from:
+            :method: :allowed_storage_profiles
+          :auto_select_single: false
+          :description: Storage Profile
+          :required: false
+          :display: :edit
+          :data_type: :integer
         :placement_host_name:
           :values_from:
             :method: :allowed_hosts
