Change provision dialogs field key :storage_profile to :placement_storage_profile

--- a/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_vmware_dialogs_clone_to_vm.yaml
@@ -407,7 +407,7 @@
           :required: false
           :display: :edit
           :data_type: :integer
-        :storage_profile:
+        :placement_storage_profile:
           :values_from:
             :method: :allowed_storage_profiles
           :auto_select_single: false
