API endpoint for notifications
This is designed to support Notification drawer UI. The UI is expected to

(1) List of unseen notification with all the details

  GET /api/notifications?expand=resources&attributes=details&filter[]=seen=false

(2) Mark single notification as a seen

  POST /api/notifications/:id
  { "action" : "mark_as_seen" }

(3) Mark set of notifications as a seen

  POST /api/notifications
  { "action" : "mark_as_seen",
    "resources": [
     { "href" : "http://localhost:3000/api/notifications/:id" },
     { "href" : "http://localhost:3000/api/notifications/:id" }
   ]
  }

--- a/config/api.yml
+++ b/config/api.yml
@@ -540,6 +540,18 @@
         :identifier: instance_guest_restart
       - :name: reset
         :identifier: instance_reset
+  :notifications:
+    :description: User's past notifications
+    :options:
+    - :collection
+    :verbs: *gp
+    :klass: NotificationRecipient
+    :collection_actions:
+      :post:
+      - :name: mark_as_seen
+    :resource_actions:
+      :post:
+      - :name: mark_as_seen
   :pictures:
     :description: Pictures
     :options:
