--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1052,6 +1052,9 @@
     - miq_widgets
     - miq_widget_contents
     - miq_workers
+    - notifications
+    - notification_recipients
+    - notification_types
     - rss_feeds
     - scan_items
     - schema_migrations
