--- a/product/reports/170_Configuration Management - Containers/110_Number of Images per Node.yaml
+++ b/product/reports/170_Configuration Management - Containers/110_Number of Images per Node.yaml
@@ -1,25 +1,35 @@
 ---
-title: Number of Pods per Node
+title: Number of Images per Node
 rpt_group: Custom
 rpt_type: Custom
 priority:
-db: ContainerNode
+db: ContainerImage
 cols:
 - name
 include:
+  container_nodes:
+    columns:
+    - name
   container_groups:
     columns:
     - name
+  container_projects:
+    columns:
+    - name
 col_order:
+- container_nodes.name
 - name
 - container_groups.name
+- container_projects.name
 headers:
 - Node Name
+- Image Name
 - Pod Name
+- Project Name
 conditions:
 order: Ascending
 sortby:
-- name
+- container_nodes.name
 group: c
 graph:
 dims:
@@ -35,12 +45,14 @@ generate_rows:
 col_formats:
 -
 -
+-
+-
 tz:
 time_profile_id:
 display_filter:
 col_options:
   name:
-    :break_label: 'Name: '
+    :break_label: 'Nodes : Name: '
 rpt_options:
   :pdf:
     :page_size: US-Letter
@@ -49,4 +61,4 @@ rpt_options:
     :hide_detail_rows: false
 miq_group_id: 2
 user_id: 1
-menu_name: Number of Pods per Node
+menu_name: Number of Images per Node
