--- a/db/fixtures/miq_report_formats.yml
+++ b/db/fixtures/miq_report_formats.yml
@@ -44,6 +44,8 @@
     :cpu_cores_used_cost: :currency_precision_2
     :cpu_allocated_cost: :currency_precision_2
     :cpu_allocated_metric: :general_number_precision_0
+    :cpu_cores_allocated_cost: :currency_precision_2
+    :cpu_cores_allocated_metric: :general_number_precision_0
     :cpu_cost: :currency_precision_2
     :memory_used_cost: :currency_precision_2
     :memory_allocated_cost: :currency_precision_2
