Change ColumnThreed to Column chart type in report definitions

--- a/product/reports/170_Configuration Management - Containers/050_Number of Nodes per CPU Cores.yaml
+++ b/product/reports/170_Configuration Management - Containers/050_Number of Nodes per CPU Cores.yaml
@@ -24,7 +24,7 @@ sortby:
 - computer_system.hardware.cpu_total_cores
 group:
 graph:
-  :type: ColumnThreed
+  :type: Column
   :count: 10
   :other: true
 dims: 1
