--- a/db/fixtures/chargeable_fields.yml
+++ b/db/fixtures/chargeable_fields.yml
@@ -58,7 +58,7 @@
   :group: fixed
   :source: storage_2
   :description: Fixed Storage Cost 2
-- :metric: user_metering_hours
+- :metric: metering_used_hours
   :group: metering
   :source: used
   :description: Metering - Hours Used
