--- a/db/fixtures/chargeback_rates.yml
+++ b/db/fixtures/chargeback_rates.yml
@@ -97,7 +97,7 @@
       :fixed_rate: 0.0
       :variable_rate: 0.0
   - :description: Metering - Hours Used
-    :metric: user_metering_hours
+    :metric: metering_used_hours
     :per_time: hourly
     :per_unit: hours
     :type_currency: Dollars
