--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: ruby
 rvm:
 - 2.3.1
+- 2.4.2
 sudo: false
 cache:
   bundler: true
@@ -14,6 +15,8 @@ env:
   - TEST_SUITE=vmdb PARALLEL=true
   - TEST_SUITE=brakeman
 matrix:
+  allow_failures:
+  - rvm: 2.4.2
   fast_finish: true
 addons:
   postgresql: '9.5'
