--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6298,7 +6298,7 @@
       :description: Display Individual Physical Server
       :feature_type: view
       :identifier: physical_server_show
-      :name: Timeline
+    - :name: Timeline
       :description: Display Timelines for Physical Servers
       :feature_type: view
       :identifier: physical_server_timeline
