REST API URL for Dev environment
In a development environment when doing integration testing
the REST API URL needs to localhost and not be the one from appliance.
In a dev enviornment we use the default value from
config/settings/development.yml webservices:url which has value
of http://localhost:4000

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1044,6 +1044,7 @@
   :timeout: 120
   :use_vim_broker: true
   :authentication_timeout: 30.seconds
+  :url:
 :workers:
   :worker_base:
     :defaults:
