--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1058,6 +1058,9 @@
     :agent_coordinator_worker:
       :heartbeat_timeout: 30.minutes
       :poll: 30.seconds
+    :ems_inventory_collector_worker:
+      :nice_delta: 1
+      :poll: 5.seconds
     :ems_refresh_core_worker:
       :poll: 1.seconds
       :nice_delta: 1
