--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1059,6 +1059,7 @@
       :heartbeat_timeout: 30.minutes
       :poll: 30.seconds
     :ems_inventory_collector_worker:
+      :disabled: true
       :nice_delta: 1
       :poll: 5.seconds
     :ems_refresh_core_worker:
