--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -6261,6 +6261,10 @@
       :description: Re-check Authentication Status of Physical Infrastructure Providers
       :feature_type: control
       :identifier: ems_physical_infra_recheck_auth_status
+    - :name: Management Console
+      :description: Open a management console
+      :feature_type: control
+      :identifier: ems_physical_infra_console
   - :name: Modify
     :description: Modify Physical Infrastructure Providers
     :feature_type: admin
