--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -350,6 +350,7 @@
   - ems_infra_show_list
   - ems_infra_tag
   - ems_infra_timeline
+  - ems_infra_admin_ui
   - ems_physical_infra_new
   - ems_physical_infra_console
   - ems_physical_infra_delete
