[WIP] Add oVirt UI feature
This patch adds a new feature for the button that opens the oVirt UI
using the credentials of the provider.

Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -5781,6 +5781,10 @@
         :description: Open the Cockpit console for VMs
         :feature_type: control
         :identifier: cockpit_console
+      - :name: oVirt UI
+        :description: Open the oVirt UI for VMs
+        :feature_type: control
+        :identifier: ovirt_ui
       - :name: Edit Tags
         :description: Edit VM Tags
         :feature_type: control
