--- a/config/settings.yml
+++ b/config/settings.yml
@@ -908,6 +908,7 @@
 :product:
   :maindb: ExtManagementSystem
   :container_deployment_wizard: false
+  :nuage: true
 :prototype:
   :queue_type: miq_queue
   :artemis:
