--- a/config/miq_expression.yml
+++ b/config/miq_expression.yml
@@ -61,6 +61,9 @@
 - Switch
 - ManageIQ::Providers::CloudManager::Template
 - ManageIQ::Providers::InfraManager::Template
+- MeteringContainerProject
+- MeteringContainerImage
+- MeteringVm
 - Tenant
 - User
 - VimPerformanceTrend
