Enable manage policies of MW server

--- a/db/fixtures/miq_product_features.yml
+++ b/db/fixtures/miq_product_features.yml
@@ -3828,6 +3828,10 @@
     :feature_type: control
     :identifier: middleware_server_control
     :children:
+    - :name: Manage Policies
+      :description: Manage Policies of Middleware Servers
+      :feature_type: control
+      :identifier: middleware_server_protect
     - :name: Edit Tags
       :description: Edit Tags of Middleware Servers
       :feature_type: control
